--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
             <ul class="nav navbar-nav">
-              <li><a href="Home">Link</a></li>
-              <li><a href="About">Link</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -45,15 +45,15 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>Who are we</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quamid.</p>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Why we code</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Why I code</h1>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repudiandae veniam sunt magnam maiores dolorum cum deserunt iste ab. </p>
               </div>
             </div>
           </div>
@@ -78,14 +78,14 @@
 
       <div class="marketing">
         <div class="container">
-         <div class="col-md-4">
+         <div class="col-sm-4 col-md-4">
            <span class="glyphicon glyphicon-user"></span>
             <h2>HTML</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolorem beatae repellendus soluta impedit, aperiam fugit modi debitis minus, sed corporis ea quia porro quam odit inventore consectetur placeat eos.
             </p>
           </div>
-         <div class="col-md-4">
+         <div class="col-sm-4 col-md-4">
            <span class="glyphicon glyphicon-sunglasses"></span>
             <h2>JavaScript</h2>
             <p>
@@ -93,7 +93,7 @@
           </p>
             
           </div>
-         <div class="col-md-4">
+         <div class="col-sm-4 col-md-4">
            <span class="glyphicon glyphicon-heart"></span>
             <h2>CSS</h2>
             <p>
