--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>Who are we</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quamid.</p>
+                <p>Coders who want to travel.</p>
               </div>
             </div>
           </div>
@@ -53,16 +53,16 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>Why I code</h1>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repudiandae veniam sunt magnam maiores dolorum cum deserunt iste ab. </p>
-              </div>
+                <p>To make a different</p> 
             </div>
           </div>
+        </div>
           <div class="item">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Passions</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              </div>
+                <p>Spending time with my grands.</p>             
+             </div>
             </div>
           </div>
         </div>
