updated Market area

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>Why I code</h1>
-                <p>To make a different</p> 
+                <p>Make then broke things</p> 
             </div>
           </div>
         </div>
@@ -82,17 +82,17 @@
          <div class="col-sm-4 col-md-4 ">
            <span class="glyphicon glyphicon-user"></span>
             <h2>HTML</h2>
-            <p>What moves me</p>
+            <p>Where the Markup happens.</p>
           </div>
         <div class="col-sm-4 col-md-4">
            <span class="glyphicon glyphicon-sunglasses"></span>
             <h2>JavaScript</h2>
-            <p>What alies me</p>
+            <p>The language to the Markup.</p>
           </div>
          <div class="col-sm-4 col-md-4">
            <span class="glyphicon glyphicon-heart"></span>
             <h2>CSS</h2>
-            <p>My help in the design department</p>
+            <p>Giving the Markup style.</p>
          </div> 
         </div>
       </div>
